--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "easymde": "^2.16.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon app.js"
   },
   "eslintConfig": {
     "extends": [
